syntax = "proto3";

package de.zbw.handle.api.v1;

import "de/zbw/handle/api/v1/handle_model.proto";
import "google/protobuf/empty.proto";

option java_package = "de.zbw.handle.api";
option java_multiple_files = true;

service HandleService {
  rpc AddHandle (AddHandleRequest) returns (AddHandleResponse);
  rpc AddHandleValues (AddHandleValuesRequest) returns (AddHandleValuesResponse);
  rpc DeleteHandle (DeleteHandleRequest) returns (DeleteHandleResponse);
  rpc ModifyHandleValues (ModifyHandleValuesRequest) returns (ModifyHandleValuesResponse);
  rpc ListHandleValues (ListHandleValuesRequest) returns (ListHandleValuesResponse);
}